# deamon-deck

./: .gitignore  CLAUDE.md  LICENSE  biome.json  flake.nix  index.html  package.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  features.md  setup.md
docs/tasks/: phase-00-dev-environment.md  phase-01-scaffold.md  phase-02-service-list.md  phase-03-service-control.md  phase-04-plist-editor.md  phase-05-log-viewer.md  phase-06-polish.md  phase-07-remaining.md  phase-08-settings.md  phase-09-ux-utilities.md  phase-10-ux-interactions.md  phase-11-ux-readability.md  phase-12-ux-navigation.md  phase-13-delete-service.md  phase-14-resizable-sidebar.md  phase-15-delete-backup-option.md  phase-16-home-navigation.md  phase-17-status-filter.md  phase-18-editor-ux.md  phase-19-editor-ux-improvement.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: launchctl.rs  logs.rs  mod.rs  plist.rs  services.rs
src-tauri/src/models/: log_line.rs  mod.rs  plist_data.rs  service.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: CategoryFilterChips.tsx  MainContent.tsx  Sidebar.tsx  (+1 more)
src/hooks/: useKeyboardShortcuts.ts  useLogSearch.ts  useLogStream.ts  usePlistEditor.ts  useServiceAction.ts  useServices.ts  useStatusCounts.ts  useTheme.ts
src/lib/: categorize.ts  commands.ts  humanize.ts  i18n.ts  plistHelp.ts  settings.ts  styles.ts  types.ts
src/store/: appState.ts
(+19 files in other folders)
