[package]
name = "deamon-deck"
version = "0.1.0"
description = "macOS LaunchAgent manager"
authors = ["ayuukumakuma"]
edition = "2021"

[lib]
name = "deamon_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.7"
dirs = "6"
thiserror = "2"
libc = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "macros", "rt"] }
tokio-util = "0.7"
notify = "7"
chrono = "0.4"
window-vibrancy = "0.5"
